# MQTT-C

./: CMakeLists.txt  tests.c
examples/: bio_publisher.c  openssl_publisher.c  reconnect_subscriber.c  simple_publisher.c  simple_subscriber.c
examples/templates/: bio_sockets.h  openssl_sockets.h  posix_sockets.h  posix_threads.h  winapi_sockets.h  winapi_threads.h
include/: mqtt_pal.h
src/: mqtt_pal.c
